    This should avoid adding build-ids to udebs without having
    the actual debug symbols available.  Thanks to Jérémy Bobbio
    for reporting the issue.  (Closes: #812879)
  * dh_makeshlibs: Do not claim to be using maintainer scripts
    for invoking ldconfig.  Thanks to Eugene V. Lyubimkin for
    the report.  (Closes: #815401)
  * Remove dh_scrollkeeper.  It is no longer used in unstable.

 -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000

debhelper (9.20160115) unstable; urgency=medium

  * Fix brown paper bag bug that caused many packages to
    FTBFS when dh_update_autotools_config was called.
    (Closes: #811052)
  * Revert removal of autoscripts/*-makeshlibs.  Some packages
    injected them directly into their maintainer scripts.
    (Closes: #811038)

 -- Niels Thykier <niels@thykier.net>  Fri, 15 Jan 2016 20:28:37 +0000

debhelper (9.20160114) unstable; urgency=low

  [ Niels Thykier ]
  * Dh_Lib.pm: Pass "-S" to dpkg-parsechangelog when requesting
    the Version field.
  * Drop compat level 3.
  * dh_install: Only fallback to debian/tmp if the given glob
    does not start with debian/tmp.  This should make the
    output on failures less weird.
  * autoscripts/*-makeshlibs: Removed, no longer used.
  * dh: In compat 10, drop the manual sequence control arguments
    and the sequence log files.  (Closes: #510855)
  * dh_update_autotools_config: New helper to update config.sub
    and config.guess.
  * dh: Run dh_update_autotools_config before dh_auto_configure.
    (Closes: #733045)
  * d/control: Add dependency on autotools-dev for the new
    dh_update_autotools_config tool.
  * dh_installinit: Correct the "PROMISE NOOP" clause to account
    for /etc/tmpfiles.d and /usr/lib/tmpfiles.d.
  * dh_strip: Add "--(no-)automatic-dbgsym" and "--dbgsym-migration"
    options to replace "--(no-)ddebs" and "--ddeb-migration".
    (Closes: #810948)

  [ Dmitry Shachnev ]