@@ -11,6 +11,9 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
     for invoking ldconfig.  Thanks to Eugene V. Lyubimkin for
     the report.  (Closes: #815401)
   * Remove dh_scrollkeeper.  It is no longer used in unstable.
+  * autoconf.pm: Apply patch from Gergely Nagy to set "VERBOSE=1"
+    when running tests to make sure that the build logs are
+    dumped on error with automake.  (Closes: #798648, #744380)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000
 
